[project]
name = "mojo-tquic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mojo>=0.25.6.0",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mojo-tquic = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
mojo = "==0.25.6"
